Bug 545716 - [12] expression switch doesn't consider that having all cases of an enum is enough to be exhaustive